# breakout

./: .gitignore  CMakeLists.txt  README.md  box_collider.cpp  box_collider.h  canvas.h  coordinates_transform_canvas_wrapper.cpp  coordinates_transform_canvas_wrapper.h  draw_command.h  game_engine.cpp  game_engine.h  game_object.h  game_runner.cpp  game_runner.h  input_manager.h  main.cpp  seconds.h  time.h  timer.h  vector2.cpp  vector2.h
app/: main.cpp  mainwindow.cpp  mainwindow.h  qcanvas.cpp  qcanvas.h  qinputmanager.cpp  qinputmanager.h
game_objects/: ball.cpp  ball.h  box_collider.h  brick.h  brick_with_pickup.h  collectable.h  death_zone.h  game_manager.cpp  game_manager.h  lives_text.h  pickup.h  player.cpp  player.h  projectile.h  score_text.h  text.h
tests/: box_collider.cpp  collectable.cpp  coordinates_transform_canvas_wrapper.cpp  death_zone.cpp  game_engine.cpp  game_object.cpp  projectile.cpp  timer.cpp  vector2.cpp
